--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -9,6 +9,15 @@ body {
 
 img {
   width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 24%;
+  bottom: 60%;
+  right: 0;
+  left: 0;
 }
 
 button {
@@ -16,6 +25,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 7px;
 }
 
 input {
@@ -24,4 +34,83 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header .right-links {
+  display: flex;
+  flex-shrink: 0;
+  list-style-type: none;
+  gap: 20px 30px;
+}
+
+.header .left-links {
+  display: flex;
+  list-style-type: none;
+  gap: 20px 30px;
+}
+
+.content .input {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 55%;
+  width: 100%;
+  gap: 20px 5px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: lightgray;
+}
+
+.footer .right-links {
+  display: flex;
+  list-style-type: none;
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  gap: 20px 30px;
+}
+
+.footer .left-links {
+  display: flex;
+  list-style-type: none;
+  position: absolute;
+  bottom: 8px;
+  left: 0;
+  gap: 20px 30px;
+}
+
+a:link {
+  text-decoration: none;
+  color: black;
+}
+
+a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+a:active {
+  text-decoration: none;
+  color: black;
 }
